--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,10 @@
-name: Java CI with Maven
+name: Create Release and Upload Artifact
 
 on:
-  release:
-    types: [created]
+  workflow_dispatch: # This triggers the workflow manually
 
 jobs:
-  build:
+  build-and-release:
 
     runs-on: ubuntu-latest
 
@@ -20,9 +19,27 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    - name: Upload JAR files to release
-      run: |
-        mv target/LeeesNC-*.jar $GITHUB_WORKSPACE/LeeesNC.jar
-        gh release upload ${{ github.repository }} $GITHUB_WORKSPACE/LeeesNC.jar --clobber
+    - name: Get Maven Version
+      id: maven-version
+      run: echo "::set-output name=version::$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive exec:exec)"
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.maven-version.outputs.version }}
+        release_name: Release ${{ steps.maven-version.outputs.version }}
+        draft: false
+        prerelease: false
+
+    - name: Upload JAR files to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: target/LeeesNC-${{ steps.maven-version.outputs.version }}.jar
+        asset_name: LeeesNC-${{ steps.maven-version.outputs.version }}.jar
+        asset_content_type: application/java-archive
